--- a/ActiveWindowsLogger/ActiveWindowsLogger.vcxproj.filters
+++ b/ActiveWindowsLogger/ActiveWindowsLogger.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="ActiveWindowsLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ActiveWindowsLogger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
