--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ enable_testing()
 
 add_executable(ActiveWindowsLogger_Linux main.cpp)
 
-target_link_libraries(ActiveWindowsLogger_Linux -lXext -lX11 -lXmuu -lxcb -lxcb-icccm -lxcb-ewmh)
+target_link_libraries(ActiveWindowsLogger_Linux -lXext -lX11 -lXmuu -lxcb -lxcb-icccm -lxcb-ewmh -lXss)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
