--- a/linux/.vscode/settings.json
+++ b/linux/.vscode/settings.json
@@ -55,6 +55,7 @@
         "map": "cpp",
         "ratio": "cpp",
         "iomanip": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "filesystem": "cpp"
     }
 }
